<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_disuccion"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/disuccion" />
    </group>
    <item android:title="@string/sub_item">
        <menu>
            <item
                android:id="@+id/nav_sub_items_1"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/sub_item_1" />
            <item
                android:id="@+id/nav_sub_items_2"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/sub_item_2" />
        </menu>
    </item>

</menu>

