<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/text_label_3"/>

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/page_6"
        android:enabled="true"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/text_label_3"/>
</menu>